src/objects/jiffle__JNConfig__c.object
<CustomObject>
    <fields>
        <fullName>jiffle__Acc_Sync_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Opportunity Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact_Role__c</fullName>
        <inlineHelpText>This value is used for the contact Role whenever opportunity contact role is synced from attendee.</inlineHelpText>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jiffle__Enable_pulling_Jifflenow_data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to enable batch config. This would enable pulling Jifflenow data into sfdc using batch apex.</inlineHelpText>
        <label>Enable pulling Jifflenow data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Sync_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__JNAccess_Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNAccess_Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__JNAdmin_Test_email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Admin Test eMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>jiffle__JNClient_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNClient_ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__JNClient_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNClient_Secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__JNCryptoKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNCryptoKey</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__JNEndpoint_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNEndpoint_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>jiffle__JNRedirect_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNRedirect_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>jiffle__JNRefresh_Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNRefresh_Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__JNUser_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNUser_ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__JNoAuthEndpoint_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JNoAuthEndpoint_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>jiffle__Notification_eMail__c</fullName>
        <description>Used for sending email once jifflenow batch for data pull is completed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notification eMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>jiffle__View_all_Cons__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will display all the contacts of Opportunity and Accounts in the external attendees of meeting.</inlineHelpText>
        <label>View all Opportunity Contacts?</label>
        <type>Checkbox</type>
    </fields>
    <label>JNConfig</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>JNConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JNConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>